--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -15,7 +15,7 @@ RED		= \033[31;1m
 # FILES 
 CPP_FILES = main.cpp\
 
-CLASS_CPP_FILES =  Animal.cpp Cat.cpp Dog.cpp\
+CLASS_CPP_FILES =  Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp\
 #SRC_FILES = $(shell find $(SRC_DIR) -name '*.cpp')
 
 # DIRECTORIES 
